[package]
name = "rmodbus"
version = "0.4.0"
authors = ["Sergei S. <div@altertech.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/alttch/rmodbus"
description = "Fast and platform-independent Modbus server framework"
readme = "README.md"
keywords = ["modbus", "server", "hardware", "nostd"]
autoexamples = false

[lib]
name ="rmodbus"
path = "src/lib.rs"

[dependencies]
ieee754 = "0.2.6"
fixedvec = "0.2.4"

[package.metadata.docs.rs]
features = []

[package.metadata.playground]
features = []

[features]
nostd = []
std = []
smallcontext = []

[dev-dependencies]
rand = "0.7.3"
crc16 = "0.4.0"
serial = "0.4.0"
lazy_static = { version = "1.4.0", features=["spin_no_std"], default-features = false }
spin = "0.5.2"

[[example]]
name = "app"
path = "examples/app.rs"
required-features = ["std"]

[[example]]
name = "tcpserver"
path = "examples/tcpserver.rs"
required-features = ["std"]

[[example]]
name = "udpserver"
path = "examples/udpserver.rs"
required-features = ["std"]

[[example]]
name = "rtuserver"
path = "examples/rtuserver.rs"
required-features = ["std"]

[[example]]
name = "asciiserver"
path = "examples/asciiserver.rs"
required-features = ["std"]
